second refactoring with 208 tests od order domian layer